[gd_scene load_steps=16 format=3 uid="uid://c6kmyiqwxj71h"]

[ext_resource type="Script" path="res://floor/rooms/doors/door.gd" id="1_vqh05"]
[ext_resource type="Texture2D" uid="uid://ten4j3kcmhu" path="res://floor/rooms/inner_hallway/inner_hallway.png" id="2_niey0"]
[ext_resource type="Texture2D" uid="uid://c4anr1pycg5s4" path="res://floor/rooms/hallway/hallway.png" id="2_qmuj4"]
[ext_resource type="Texture2D" uid="uid://bkuy50xvn5wek" path="res://floor/rooms/bathroom/bathroom.png" id="4_8acri"]
[ext_resource type="Texture2D" uid="uid://ojk3s4n7tpnm" path="res://floor/rooms/classroom/standard_classroom/standard_classroom.png" id="5_0xc0c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_igjfj"]
atlas = ExtResource("2_niey0")
region = Rect2(32, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt0px"]
atlas = ExtResource("2_qmuj4")
region = Rect2(32, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yxk5"]
atlas = ExtResource("4_8acri")
region = Rect2(128, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2c1h"]
atlas = ExtResource("5_0xc0c")
region = Rect2(0, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68bdl"]
atlas = ExtResource("2_niey0")
region = Rect2(32, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o8dp"]
atlas = ExtResource("2_niey0")
region = Rect2(96, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6a4n"]
atlas = ExtResource("2_qmuj4")
region = Rect2(96, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxy1h"]
atlas = ExtResource("2_qmuj4")
region = Rect2(96, 128, 64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gded3"]
size = Vector2(8, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvmi7"]
size = Vector2(8, 12.9766)

[node name="Door" type="Node2D"]
script = ExtResource("1_vqh05")
inner_hallway_inside_door_texture = SubResource("AtlasTexture_igjfj")
inner_hallway_outside_door_texture = SubResource("AtlasTexture_gt0px")
bathroom_door_texture = SubResource("AtlasTexture_6yxk5")
classroom_inside_door_texture = SubResource("AtlasTexture_a2c1h")
classroom_outside_door_texture = SubResource("AtlasTexture_68bdl")
office_door_texture = SubResource("AtlasTexture_1o8dp")
placeholder_door_texture = SubResource("AtlasTexture_b6a4n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_wxy1h")
hframes = 2

[node name="OpenedArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 7

[node name="OpenedCollider" type="CollisionShape2D" parent="OpenedArea2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_gded3")

[node name="ClosedArea2D" type="StaticBody2D" parent="."]
collision_layer = 33
collision_mask = 7

[node name="ClosedCollider" type="CollisionShape2D" parent="ClosedArea2D"]
position = Vector2(0, 0.988281)
shape = SubResource("RectangleShape2D_yvmi7")
disabled = true

[connection signal="area_entered" from="OpenedArea2D" to="." method="_on_opened_area_2d_area_entered"]
